@@ -4,7 +4,6 @@
  <version>10.0</version>
  <dependencies>
   <dependency>profile-eea.alchemy:default</dependency>
-  <dependency>profile-Products.ATVocabularyManager:default</dependency>
   <dependency>profile-eea.jquery:13-splitter</dependency>
   <dependency>profile-eea.jquery:23-select2</dependency>
  </dependencies>
