@@ -1,43 +1,0 @@
-<configure
-  xmlns="http://namespaces.zope.org/zope"
-  xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
-  i18n_domain="eea">
-
-  <genericsetup:upgradeSteps
-    source="*"
-    destination="5.3"
-    profile="eea.geotags:default">
-
-    <genericsetup:upgradeStep
-      title="Install EEA Countries custom name mappings"
-      handler="eea.geotags.upgrades.evolve53.install_countries_map_vocabulary"
-    />
-
-  </genericsetup:upgradeSteps>
-
-  <genericsetup:upgradeSteps
-    source="6.8"
-    destination="6.9"
-    profile="eea.geotags:default">
-
-    <genericsetup:upgradeStep
-      title="Migrate wrong country names and remove country groups"
-      handler="eea.geotags.upgrades.evolve69.migrate_country_names"
-    />
-
-  </genericsetup:upgradeSteps>
-
-
-  <genericsetup:upgradeSteps
-    source="6.7"
-    destination="6.8"
-    profile="eea.geotags:default">
-
-    <genericsetup:upgradeStep
-      title="Update EEA Countries custom name mappings"
-      handler="eea.geotags.upgrades.evolve53.install_countries_map_vocabulary"
-    />
-
-  </genericsetup:upgradeSteps>
-
-</configure>
